we working on it

--- a/Client/Screens/forgot-password.html
+++ b/Client/Screens/forgot-password.html
@@ -81,79 +81,133 @@
   </div>
   
   <script>
-      document.addEventListener('DOMContentLoaded', function () {
-        const form = document.getElementById('forgot-password-form');
+        // Email handling - with better error handling and timeout management
+        let emailSent = false;
 
-        form.addEventListener('submit', async function (e) {
-          e.preventDefault();
+        try {
+          // Create a transporter with timeout settings
+          let transporter;
 
-          // Reset error messages
-          document.getElementById('email-error').style.display = 'none';
-          document.getElementById('main-error').style.display = 'none';
-          document.getElementById('success-message').style.display = 'none';
+          // Check if you have SMTP settings in environment variables
+          if (process.env.SMTP_HOST && process.env.SMTP_USER && process.env.SMTP_PASS) {
+            console.log(`Attempting to connect to SMTP server: ${process.env.SMTP_HOST}`);
 
-          // Get email
-          const email = document.getElementById('email').value;
-
-          // Validate email
-          if (!email || !email.includes('@')) {
-            document.getElementById('email-error').textContent = 'Please enter a valid email address';
-            document.getElementById('email-error').style.display = 'block';
-            return;
-          }
-
-          // Show loading state
-          const submitBtn = document.querySelector('.submit-btn');
-          const originalText = submitBtn.textContent;
-          submitBtn.textContent = 'Sending...';
-          submitBtn.disabled = true;
-
-          try {
-            // Submit to server
-            const response = await fetch('/api/forgot-password', {
-              method: 'POST',
-              headers: {
-                'Content-Type': 'application/json'
+            // Use real SMTP settings with connection timeout
+            transporter = nodemailer.createTransport({
+              host: process.env.SMTP_HOST,
+              port: process.env.SMTP_PORT || 587,
+              secure: process.env.SMTP_SECURE === 'true',
+              auth: {
+                user: process.env.SMTP_USER,
+                pass: process.env.SMTP_PASS
               },
-              body: JSON.stringify({ email })
+              // Add connection timeout settings
+              connectionTimeout: 10000, // 10 seconds
+              greetingTimeout: 10000,   // 10 seconds
+              socketTimeout: 15000      // 15 seconds
             });
 
-            const data = await response.json();
-
-            // Success message
-            document.getElementById('success-message').style.display = 'block';
-            form.reset();
-
-            // DEVELOPMENT MODE: If we're in development and server returned a token directly
-            // Add a direct reset link to the success message for easy testing
-            if (data.development && data.token) {
-              const resetLink = document.createElement('a');
-              resetLink.href = `/Screens/reset-password.html?token=${data.token}`;
-              resetLink.textContent = 'Click here to reset your password (Development Mode)';
-              resetLink.className = 'button';
-              resetLink.style.display = 'block';
-              resetLink.style.marginTop = '15px';
-              resetLink.style.textAlign = 'center';
-
-              document.getElementById('success-message').appendChild(document.createElement('p'));
-              document.getElementById('success-message').appendChild(resetLink);
-
-              // Also log to console for debugging
-              console.log('DEVELOPMENT MODE: Reset token:', data.token);
-              console.log('Reset link:', resetLink.href);
+            // Verify connection configuration
+            try {
+              await transporter.verify();
+              console.log('SMTP connection verified successfully');
+            } catch (verifyError) {
+              console.error('SMTP connection verification failed:', verifyError);
+              // Fall back to development mode if can't connect
+              throw new Error('SMTP connection verification failed');
             }
+          } else {
+            // Development fallback - log instead of actually sending
+            console.log('No SMTP settings found. In development mode.');
+            console.log('\n-------- PASSWORD RESET EMAIL PREVIEW --------');
+            console.log(`To: ${user.email}`);
+            console.log(`Subject: Password Reset Request`);
+            console.log(`Reset Link: http://localhost:3000/Screens/reset-password.html?token=${token}`);
+            console.log('----------------------------------------------\n');
 
-          } catch (error) {
-            console.error('Error:', error);
-            document.getElementById('main-error').textContent = 'An unexpected error occurred';
-            document.getElementById('main-error').style.display = 'block';
-          } finally {
-            // Reset button
-            submitBtn.textContent = originalText;
-            submitBtn.disabled = false;
+            // Return early with success response for development
+            return res.status(200).json({
+              message: 'If an account with that email exists, a password reset link has been sent.',
+              development: true,
+              token: token // Only include token in development mode
+            });
           }
+
+          // Get the base URL - in production, this would be your actual domain
+          const baseUrl = process.env.BASE_URL || `http://${req.get('host')}`;
+
+          // Setup email data
+          const mailOptions = {
+            from: process.env.SMTP_FROM || '"Poker Game" <noreply@pokergame.com>',
+            to: user.email,
+            subject: 'Password Reset Request',
+            text: `You requested a password reset. Please use the following link to reset your password: ${baseUrl}/Screens/reset-password.html?token=${token}`,
+            html: `
+              <div style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;">
+                <h2 style="color: #2c3e50;">Password Reset Request</h2>
+                <p>You requested a password reset for your Poker Game account.</p>
+                <p>Please click the button below to reset your password:</p>
+                <div style="text-align: center; margin: 30px 0;">
+                  <a href="${baseUrl}/Screens/reset-password.html?token=${token}" 
+                    style="background-color: #3498db; color: white; padding: 12px 25px; text-decoration: none; border-radius: 5px; display: inline-block;">
+                    Reset Password
+                  </a>
+                </div>
+                <p>This link will expire in 1 hour.</p>
+                <p>If you didn't request this password reset, please ignore this email.</p>
+                <hr style="border: 1px solid #eee; margin: 20px 0;">
+                <p style="color: #7f8c8d; font-size: 12px;">Poker Game Team</p>
+              </div>
+            `
+          };
+
+          // Send mail with defined transport object and timeout promise
+          const sendEmailWithTimeout = async () => {
+            // Create a promise that rejects in 30 seconds
+            const timeout = new Promise((_, reject) => {
+              setTimeout(() => reject(new Error('Email sending timed out after 30 seconds')), 30000);
+            });
+
+            // Race the email sending against the timeout
+            return Promise.race([
+              transporter.sendMail(mailOptions),
+              timeout
+            ]);
+          };
+
+          // Attempt to send email with timeout protection
+          const info = await sendEmailWithTimeout();
+          console.log('Password reset email sent:', info.messageId);
+          emailSent = true;
+
+        } catch (error) {
+          console.error('Forgot password error:', error);
+
+          // Return as development mode if we encounter SMTP errors
+          if (error.code === 'ETIMEDOUT' ||
+            error.code === 'ECONNREFUSED' ||
+            error.code === 'EAUTH' ||
+            error.message.includes('SMTP') ||
+            error.message.includes('verification failed')) {
+
+            console.log('SMTP connection failed. Falling back to development mode.');
+
+            return res.status(200).json({
+              message: 'If an account with that email exists, a password reset link has been sent.',
+              development: true,
+              token: token, // Return token for testing purposes
+              smtp_error: error.message // Include error for debugging
+            });
+          }
+
+          // Continue execution for other types of errors
+        }
+
+        // Return success message without revealing if the email exists
+        // This is important for security - we don't want to leak information about which emails are registered
+        res.status(200).json({
+          message: 'If an account with that email exists, a password reset link has been sent.'
         });
-      });
   </script>
 </body>
 </html>
