--- a/Client/Screens/poker/poker.html
+++ b/Client/Screens/poker/poker.html
@@ -18,7 +18,7 @@
       gap: 10px;
       position: fixed;
       top: 20px;
-      left: 20px; /* Move to left side instead of right */
+      left: 80px; /* Move further right to avoid back button overlap */
       background: rgba(0, 0, 0, 0.6);
       padding: 10px 15px;
       border-radius: 10px;
